--- a/style/index.css
+++ b/style/index.css
@@ -315,3 +315,75 @@ a {
     grid-column: 6/span 7;
 
 }
+/* whhy choose us section start */
+.chooseText {
+    max-width: 672;margin: 0 auto;
+    text-align: center;
+    margin-top: 70px;
+}
+.chooseText h1{
+    font-weight: 800;
+    font-size: 40px;
+    margin-bottom: 35px;
+}
+.chooseText p{
+    color: rgba(32, 32, 38, 0.7);
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+.choose-us-text{
+    max-width: 650px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 80px;
+}
+
+#iconcard{
+    max-width: 700px;
+    height: 280px;
+    padding: 20px;
+    
+}
+#iconcard h3{
+    color: #131318;
+    font-size: 28px;
+    font-weight: 800;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+.icon-grid{
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px;
+}
+.iconcrad1{
+    width: 100%;
+    height: 100%;
+    grid-column: 1/span 6;
+    grid-row: 1/span 1;
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+}
+.iconcrad2{
+    width: 100%;
+    height: 100%;
+    grid-column: 7/span 6;
+    grid-row: 1/span 1;
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+}
+.iconcrad3{
+    width: 100%;
+    height: 100%;
+    grid-column: 4/span 6;
+    grid-row: 2/span 1;
+    border-radius: 16px;
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+}
+/* whhy choose us section end */
