--- a/style/index.css
+++ b/style/index.css
@@ -387,3 +387,101 @@ a {
     background: rgba(233, 68, 68, 0.05);
 }
 /* whhy choose us section end */
+/* discounts star style */
+.p_text{
+    display: flex;
+    gap: 30px;
+    
+}
+.p_text > p > i{
+    color: #FF5400;
+    font-size: 20px;
+    margin-right: 8px;
+}
+.p_text p{
+    font-size: 18px;
+    font-weight: 400;
+}
+#all_text h2{
+    color: #131318;
+    font-size: 28px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+#all_text p{
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+#all_text h4{
+    color: #FF5400;
+    font-size: 22px;
+    font-weight: 800;
+    margin-bottom: 18px;
+}
+.discount-text1{
+    padding: 40px;
+    max-width: 600px;
+    height: 400px;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    position: relative;
+    top: 115px;
+    left: 715px;
+}
+
+.discount-text2{
+    padding: 40px;
+    max-width: 600px;
+    height: 400px;
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    position: relative;
+    top: 115px;
+    left: 130px;
+
+}
+.discount-bg1{
+    background-image: url(../Images/Group\ 39.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 630px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.discount-bg{
+    background-image: url(../Images/Group\ 40.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 630px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.deals-text{
+    margin-top: 70px;
+}
+.deals_text h1{
+    color: #131318;
+    text-align: center;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 25px;
+}
+.deals-text p{
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 40px;
+}
+
+.bttn{
+    display: flex;
+    justify-content: center;
+}
+/* discounts style end  */
