--- a/style/index.css
+++ b/style/index.css
@@ -164,81 +164,6 @@ a {
 }
 
 /* your destination */
-/* .u_destination-text{
-    margin-top: 70px;
-}
-.u_destination-tex{
-    max-width: 680px;
-    margin: 0 auto;
-    text-align: center;
-}
-.u_destination-text h1{
-    color: #212020;
-    font-size: 45px;
-    font-weight: 900;
-    margin-bottom: 30px;
-}
-.u_destination-text p{
-    color: rgba(25, 25, 30, 0.7);
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 50px;
-}
-.imaegec{
-    width: 100%;
-    height: fit-content;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-.imaegec h5{
-    color: #FFF;
-    font-size: 25px;
-    font-weight: 900;
-    position: absolute;
-}
-.image_area{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
-    margin: 10px;
-}
-.image_area img{
-    width: 100%;
-    height: auto;
-}
-.maldiv{
-    grid-column: 1/span 6;
-    grid-row: 1/span 1;
-}
-.indonesia{
-    grid-column: 7/span 6;
-    grid-row: 1/span 1;
-}
-.kasmir{
-    grid-column: 10/span 3;
-    grid-row: 2/span 1;
-}
-.amerika{
-    grid-column: 5/span 5;
-    grid-row: 2/span 1;
-}
-.srilanka{
-    grid-column: 1/span 4;
-    grid-row: 2/span 1;
-}
-.bd{
-    grid-column: 1/span 5;
-    grid-row: 3/span 1;
-    
-}
-.bandarban{
-    grid-column: 6/span 7;
-} */
 #iteam {
     margin-top: 80px;
 }
@@ -587,3 +512,177 @@ a {
 }
 
 /* perfact place section style end */
+
+/*  Newsletter section style start*/
+.form h3 {
+    color: #131318;
+    font-size: 35px;
+    font-weight: 800;
+    margin-bottom: 15px;
+}
+
+.form p {
+    color: #5A5A5D;
+    font-size: 20px;
+    font-weight: 400;
+    border-bottom: 2px solid rgba(19, 19, 24, 0.10);
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+}
+
+
+.form>input,
+button {
+    display: block;
+}
+
+
+
+.form>input {
+    width: 450px;
+    height: 52px;
+    border: none;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 18px;
+    padding: 5px 0px 5px 15px;
+    font-weight: 400;
+    margin-top: 20px;
+}
+
+.form-btn {
+    width: 450px;
+    height: 52px;
+    border: none;
+    border-radius: 8px;
+    background: #FF5400;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    margin-top: 20px;
+}
+
+
+
+
+.form-btn a {
+    color: #FFF;
+}
+
+
+
+.form {
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    width: 40%;
+    height: 420px;
+    padding: 30px 50px 30px 50px;
+}
+
+
+
+
+.travel-discount {
+    width: 324px;
+    height: 120px;
+    transform: rotate(-19.628deg);
+    border-radius: 16px;
+    background: #FF5400;
+    padding: 20px;
+    position: absolute;
+    bottom: 45px;
+    left: 340px;
+}
+
+
+
+
+.travel-discount p {
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+
+
+.travel-discount h2 {
+    color: #FFF;
+    font-family: Mulish;
+    font-size: 32px;
+    font-weight: 800;
+    text-align: center;
+}
+
+
+
+
+.travel-photo {
+    position: relative;
+}
+
+
+
+
+.newsletter {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* Newsletter section  style end */
+
+/* footer section style start */
+.containerr{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+.footer-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+.footer-title h2{
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+}
+.footer-sp{
+    color: #FF5400;
+}
+.footer-text p{
+    color: #5A5A5D;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 25px;
+}
+.fa-icon{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    margin-bottom: 30px;
+}
+.fa-icon > p > i{
+    font-size: 25px;
+}
+.footer-text{
+    border-bottom: 2px solid rgba(2, 2, 92, 0.05);
+    
+}
+.footer-copy{
+    color: #5A5A5D;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 40px;
+}
+footer{
+    background: rgba(19, 19, 24, 0.05);
+    padding: 100px 0px 100px 0px;
+    margin-top: 100px;
+}
+/* footer section style end */
