--- a/style/index.css
+++ b/style/index.css
@@ -124,6 +124,7 @@ a {
     margin-top: 80;
     padding: 0 100px;
     justify-content: space-between;
+    gap: 20px;
 
 }
 
@@ -133,10 +134,11 @@ a {
 }
 
 .tours-text h1 {
-    margin-bottom: 28px;
+   margin-bottom: 38px;
     color: #131318d0;
-    font-size: 42px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: 800;
+    font-size: 45px;
 }
 
 .read_button {
@@ -148,7 +150,7 @@ a {
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     padding: 0 10px;
 }
 
@@ -161,8 +163,11 @@ a {
     color: rgba(19, 19, 24, 0.70);
     font-size: 20px;
     font-weight: 400;
-    margin-bottom: 10px;
+    margin-top: 30px;
 
+}
+.button_pT{
+    margin-top: 20px;
 }
 
 /* your destination */
@@ -428,18 +433,19 @@ a {
 
 .deals-text {
     margin-top: 70px;
+    align-items: center;
 }
 
 .deals_text h1 {
     color: #131318;
     text-align: center;
-    text-align: center;
     font-size: 40px;
     font-weight: 800;
     margin-bottom: 25px;
+    
 }
 
-.deals-text p {
+.deals_text p {
     color: rgba(19, 19, 24, 0.70);
     text-align: center;
     font-size: 18px;
@@ -588,7 +594,7 @@ button {
 .travel-discount {
     width: 324px;
     height: 120px;
-    transform: rotate(-19.628deg);
+    transform: rotate(-16.630deg);
     border-radius: 16px;
     background: #FF5400;
     padding: 20px;
@@ -754,7 +760,7 @@ footer{
     .pm_button{
         width: 265px;
     }
-    /* Banner Section style start */
+    /* Banner Section style end */
 
     /* popular tours style start*/
         .popularTours{
@@ -763,14 +769,13 @@ footer{
             margin-left: 10px;
             margin-right: 10px;
         }
-        .tours-text{
+        .tours_text{
             width: 100%;
             
         }
         .popularTours_img img{
             width: 100%;
             display: grid;
-            grid-template-columns: repeat(1 , 1fr);
             
         }
         .ptours-text h1{
