--- a/style/index.css
+++ b/style/index.css
@@ -442,6 +442,7 @@ a {
     font-size: 40px;
     font-weight: 800;
     margin-bottom: 25px;
+    margin-top: 50px;
     
 }
 
@@ -460,38 +461,38 @@ a {
 
 /* discounts style end  */
 /* perfact place section style start */
-.perfact-pace {
+.perfact_pace {
     display: flex;
     justify-content: space-between;
     margin-top: 80px;
 }
 
-.perfact-text h1 {
+.perfact_text h1 {
     color: #131318;
     font-size: 44px;
     font-weight: 800;
     margin-bottom: 25px;
 }
 
-.perfact-text p {
+.perfact_text p {
     color: #5A5A5D;
     font-size: 18px;
     font-weight: 400;
 
 }
 
-.perfact-text>ul>li {
+.perfact_text > ul >li {
     color: #131318;
     font-size: 18px;
     font-weight: 700;
     margin-bottom: 10px;
 }
 
-.perfact-text>ul {
+.perfact_text > ul {
     padding: 40px;
 }
 
-.perfact-text {
+.perfact_text {
     width: 50%;
 }
 
@@ -501,7 +502,7 @@ a {
     background: linear-gradient(180deg, #161618 -31.96%, rgba(19, 19, 24, 0.00) 100%);
 }
 
-.main-video {
+.main_video {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -532,10 +533,10 @@ a {
 .form p {
     color: #5A5A5D;
     font-size: 20px;
-    font-weight: 400;
     border-bottom: 2px solid rgba(19, 19, 24, 0.10);
-    padding-bottom: 30px;
     margin-bottom: 20px;
+    font-weight: 400;
+    padding-bottom: 30px;
 }
 
 
@@ -559,7 +560,7 @@ button {
     margin-top: 20px;
 }
 
-.form-btn {
+.form_btn {
     width: 450px;
     height: 52px;
     border: none;
@@ -574,7 +575,7 @@ button {
 
 
 
-.form-btn a {
+.form_btn a {
     color: #FFF;
 }
 
@@ -591,7 +592,7 @@ button {
 
 
 
-.travel-discount {
+.travel_discount {
     width: 324px;
     height: 120px;
     transform: rotate(-16.630deg);
@@ -606,7 +607,7 @@ button {
 
 
 
-.travel-discount p {
+.travel_discount p {
     color: #FFF;
     text-align: center;
     font-size: 24px;
@@ -615,7 +616,7 @@ button {
 
 
 
-.travel-discount h2 {
+.travel_discount h2 {
     color: #FFF;
     font-family: Mulish;
     font-size: 32px;
@@ -626,7 +627,7 @@ button {
 
 
 
-.travel-photo {
+.travel_photo {
     position: relative;
 }
 
