--- a/style/index.css
+++ b/style/index.css
@@ -762,3 +762,25 @@ footer{
         width: 265px;
     }
     /* Banner Section style end */
+/* chose your destination start */
+.tours_text{
+    padding: 0px 8px 8px 8px;
+    margin-bottom: 30px;
+}
+.tours_text h1
+{
+font-size: 30px;
+}
+.tours_text p
+{
+    margin-bottom: 20px;
+}
+ul{
+    margin: 0px 10px 0px 10px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+.popularTours{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
